--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "clear",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "build": "next build"
   },
   "author": "",
   "license": "MIT",
